# net-ssr

./: .gitignore  Cargo.toml  README.md  README.zh.md  build.rs
.github/workflows/: aur_publish.yml  cargo_publish.yml  docker.yml  release.yml
aur/: PKGBUILD
docker/: Dockerfile.interrogator  Dockerfile.interrorgator  Dockerfile.transponder
net-ssr-shared/: Cargo.toml
net-ssr-shared/src/: lib.rs
scripts/: build.sh  fill_PKGBUILD.sh
src/: command.rs  interrogator.rs  lib.rs  transponder.rs
src/command/: Cargo.toml
src/interrogator/: main.rs
systemd/: transponder.service
