[package]
authors = ["libook <libook7@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "network-programming"]
description = "Network Secondary Surveillance Radar"
documentation = "https://docs.rs/net-ssr"
edition = "2021"
exclude = [".github", ".idea", ".vscode", "man", "completions"]
homepage = "https://github.com/libook/net-ssr"
keywords = ["network", "IP_locator", "cli", "device_tracking", "monitoring"]
license = "GPL-3.0"
name = "net-ssr"
readme = "README.md"
repository = "https://github.com/libook/net-ssr.git"
version = "0.2.0"

[[bin]]
name = "interrogator"
path = "src/interrogator.rs"

[[bin]]
name = "transponder"
path = "src/transponder.rs"

[dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
hostname = "^0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
pnet = "0.35.0"

[build-dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
clap_complete         = "4.5.6"
clap_complete_fig     = "4.5.1"
clap_complete_nushell = "4.5.2"
clap_mangen = "0.2.22"
