[package]
authors = ["libook <libook7@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities", "network-programming"]
description = "Network Secondary Surveillance Radar"
documentation = "https://docs.rs/net-ssr"
edition = "2021"
exclude = [".github", ".idea", ".vscode", "man", "completions"]
homepage = "https://github.com/libook/net-ssr"
keywords = ["network", "IP_locator", "cli", "device_tracking", "monitoring"]
license = "GPL-3.0"
name = "net-ssr"
readme = "README.md"
repository = "https://github.com/libook/net-ssr.git"
version = "0.3.4"

[[bin]]
name = "interrogator"
path = "src/interrogator.rs"

[[bin]]
name = "transponder"
path = "src/transponder.rs"

[dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
hostname = "^0.4"
tokio = { version = "1", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
pnet = { version = "0.35.0", features = ["pnet_datalink"] }

[build-dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
clap_complete = "4.5.6"
clap_complete_fig = "4.5.1"
clap_complete_nushell = "4.5.2"
clap_mangen = "0.2.22"

[target.aarch64-unknown-linux-gnu]
strip = { path = "/usr/bin/aarch64-linux-gnu-strip" }

[package.metadata.deb]
assets = [
    # binaries
    ["target/release/interrogator", "usr/bin/interrogator", "755"],
    ["target/release/transponder", "usr/bin/transponder", "755"],
    # man pages
    ["man/interrogator.1", "usr/share/man/man1/", "644"],
    ["man/transponder.1", "usr/share/man/man1/", "644"],
    # systemd services
    ["systemd/transponder.service", "usr/lib/systemd/system/", "644"],
    # shell completions
    ## interrogator
    ["completions/_interrogator", "usr/share/zsh/site-functions/_interrogator", "644"],
    ["completions/interrogator.bash", "usr/share/bash-completion/completions/interrogator", "644"],
    ["completions/interrogator.fish", "usr/share/fish/vendor_completions.d/interrogator.fish", "644"],
    ## transponder
    ["completions/_transponder", "usr/share/zsh/site-functions/_transponder", "644"],
    ["completions/transponder.bash", "usr/share/bash-completion/completions/transponder", "644"],
    ["completions/transponder.fish", "usr/share/fish/vendor_completions.d/transponder.fish", "644"],
]
